feat: add role binding lookup
