# internal/transport/http/server.go
@@ -85,9 +85,11 @@ func NewServer(lc fx.Lifecycle, cfg config.Config, handler *Handler, authService
 	api.POST("/authorization/my-role-permissions/list", handler.ListMyRolePermissions)
 	api.POST("/authorization/my-role-permissions/batch-get", handler.BatchGetMyRolePermissions)
 	api.POST("/authorization/bindings/create", handler.CreateBinding)
+	api.POST("/authorization/bindings/get", handler.GetBinding)
 	api.POST("/authorization/bindings/revoke", handler.RevokeBinding)
 	api.POST("/authorization/bindings/list", handler.ListBindings)
 	api.POST("/authorization/my-bindings/create", handler.CreateMyBinding)
+	api.POST("/authorization/my-bindings/get", handler.GetMyBinding)
 	api.POST("/authorization/my-bindings/revoke", handler.RevokeMyBinding)
 	api.POST("/authorization/my-bindings/list", handler.ListMyBindings)
 	api.POST("/authorization/check", handler.CheckAuthorization)
